Tue Jan  2 12:18:33 2007  Tim Janik  <timj@imendio.com>

	* modulesets/gtk.modules: also fix up gnome-common and intltool URLs.

Tue Jan  2 11:25:17 2007  Tim Janik  <timj@imendio.com>

	* first steps at getting the Gtk+ toolchain to build with GNOME SVN.

	* modulesets/gtk.modules: renamed old gnome repo from gnome.org to
	cvs.gnome.org. added new default repo svn.gnome.org.
	converted module branch specifications to check out */trunk
	directories into directories with checkoutdir=MODULENAME.

2006-12-26  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.18.modules: Restore HEAD branch for
	gnome-system-monitor (no more unblessed external
	dependency).

2006-12-20  Elijah Newren  <newren@gmail.com>

	* modulesets/freedesktop-2.18.modules: Cairo is an external dep;
	it should be pulled from tarballs, not git.

	* modulesets/bootstrap.modules: update autoconf to 2.60 since some
	modules now require it.

2006-12-20  Behdad Esfahbod  <behdad@gnome.org>

	* modulesets/gnome-2.16.modules: vte has branched for gnome-2-16.

2006-12-19  Wouter Bolsterlee  <wbolster@cvs.gnome.org>

	* modulesets/gnome-2.16.modules: gnome-media has
	branched for gnome-2-16.

2006-12-18  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/freedesktop-2.18.modules:

	Update to hicolor-icon-theme 0.10, needed to use all icon context
	defined by Icon Naming Spec

2006-12-14  Kjartan Maraas  <kmaraas@gnome.org>

	* modulesets/freedesktop-2.18.modules: Use cairo from git to get
	more testing of that before we start using it for 2.18.0.

2006-12-14  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/freedesktop-2.18.modules:
	* modulesets/gnome-2.18.modules:

	Grab liboobs from cvs: it's a desktop module, not external dep.

2006-12-12  Carlos Eduardo Rodrigues Diogenes  <cerdiogenes@yahoo.com.br>

	* modulesset/gnutls: Remove "alpha" from the gnutls URL.

2006-12-03  Christian Kirbach  <Christian.Kirbach@siemens.com>

	* modulesets/gnome-2.16.modules: Use liboil 0.3.10 tarball, 0.3.8 is