@@ -1,3 +1,8 @@
+2007-01-02  Mark McLoughlin  <mark@skynet.ie>
+
+	* jhbuild/versioncontrol/svn.py: fix minor buglet in
+	SubversionRepository.branch()
+
 Tue Jan  2 12:18:33 2007  Tim Janik  <timj@imendio.com>
 
 	* modulesets/gtk.modules: also fix up gnome-common and intltool URLs.
